# Apex_rl

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  dev.txt  pyproject.toml
.github/workflows/: release.yml
benchmarks/: run_smoke_benchmarks.py
src/apexrl/: __init__.py
src/apexrl/agent/: __init__.py  off_policy_runner.py  on_policy_runner.py
src/apexrl/algorithms/: __init__.py
src/apexrl/algorithms/DQN/: dqn.py
src/apexrl/algorithms/TD3/: README.md
src/apexrl/algorithms/dqn/: __init__.py  config.py  dqn.py
src/apexrl/algorithms/ppo/: __init__.py  config.py  ppo.py
src/apexrl/buffer/: __init__.py  replay_buffer.py  rollout_buffer.py
src/apexrl/envs/: __init__.py  gym_wrapper.py  vecenv.py
src/apexrl/models/: __init__.py  base.py  mlp.py
src/apexrl/models/dynamics/: __init__.py
src/apexrl/optimizers/: __init__.py  muon.py
src/apexrl/utils/: __init__.py  logger.py
test/: conftest.py  test_dqn.py  test_logging.py  test_smoke_training.py  test_syntax.py
